Add storeUrl to data_config.json

--- a/data_config.json
+++ b/data_config.json
@@ -1,8 +1,9 @@
 {
   "announcementUrl": "",
   "adsUrl": "",
+  "storeUrl": "https://example.com/",
   "ui": {
-    "flickInfo": true,
+    "awareInfoUpdate": true,
     "theme": ""
   }
 }
